--- a/Crypto.Core/Crypto.Net.Core.csproj
+++ b/Crypto.Core/Crypto.Net.Core.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\XmlSerialization\XmlSerialization\XmlSerialization.Core.csproj" />
+    <ProjectReference Include="..\..\XmlSerialization\XmlSerialization\XmlSerialization.Core.csproj" />
   </ItemGroup>
 
 </Project>
