--- a/Crypto.Strategies/Crypto.LowCodeStrategies.Net.csproj
+++ b/Crypto.Strategies/Crypto.LowCodeStrategies.Net.csproj
@@ -8,6 +8,7 @@
         <AvaloniaVersion>11.0.10</AvaloniaVersion>
         <EremexVersion>[1.0.28,)</EremexVersion>
         <RootNamespace>Crypto.Strategies.Net</RootNamespace>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <ItemGroup>
@@ -32,7 +33,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\WorkflowDiagram\WorkflowDiagram.Nodes.Base\WorkflowDiagram.Nodes.Base.Core.Develop.csproj" />
+      <ProjectReference Include="..\..\WorkflowDiagram\WorkflowDiagram.Nodes.Base\WorkflowDiagram.Nodes.Base.Core.Develop.csproj" />
       <ProjectReference Include="..\Crypto.Core\Crypto.Net.Core.csproj" />
       <ProjectReference Include="..\Workflow.Nodes.Crypto\Workflow.Nodes.Crypto.Net.Develop.csproj" />
     </ItemGroup>
