fix  Error CS0579 : Duplicate 'System.Reflection.AssemblyCompanyAttribute' attribute

--- a/Crypto.Strategies/Crypto.LowCodeStrategies.Net.csproj
+++ b/Crypto.Strategies/Crypto.LowCodeStrategies.Net.csproj
@@ -8,6 +8,7 @@
         <AvaloniaVersion>11.0.10</AvaloniaVersion>
         <EremexVersion>[1.0.28,)</EremexVersion>
         <RootNamespace>Crypto.Strategies.Net</RootNamespace>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <ItemGroup>
